fix male, female lang

--- a/homepage.html
+++ b/homepage.html
@@ -1445,7 +1445,7 @@
                 <div class="form-group"><label>שם פרטי:</label><input type="text" id="register-first-name" required></div>
                 <div class="form-group"><label>שם משפחה:</label><input type="text" id="register-last-name" required></div>
                 <div class="form-group"><label>תפקיד:</label><select id="register-position" required>
-                    <option value="מהנדס מחקר">מהנדס מחקר</option>
+                    <option value="מהנדס/ת מחקר">מהנדס/ת מחקר</option>
                                         <option value="מנהל/ת">מנהל/ת</option>
 
                 </select></div>
@@ -1488,7 +1488,7 @@
         <div class="form-group"><label>תפקיד:</label>
             <select id="profile-position" disabled style="background-color: #f9fafb;">
                 <option value="מנהל/ת">מנהל/ת</option>
-                <option value="מהנדס מחקר">מהנדס מחקר</option>
+                <option value="מהנדס/ת מחקר">מהנדס/ת מחקר</option>
             </select>
         </div>
         <div id="profile-manager-warning" class="info-message" style="display:none; margin-top:10px;">
