--- a/admin-dashboard/pdf_report.html
+++ b/admin-dashboard/pdf_report.html
@@ -302,7 +302,7 @@
                 </div>
                 <div class="profile-item">
                     <div class="label">תפקיד</div>
-                    <div class="value" id="profile-role">עוזר/ת מחקר</div>
+                    <div class="value" id="profile-role">מהנדס/ת מחקר</div>
                 </div>
                  <div class="profile-item" style="grid-column: 1 / -1;">
                     <div class="label">תקופת הדיווח</div>
