--- a/admin-dashboard/raw_data_report.html
+++ b/admin-dashboard/raw_data_report.html
@@ -490,7 +490,7 @@
                 </div>
                 <div class="stat-item">
                     <div class="stat-value">${stats.uniqueResearchers}</div>
-                    <div class="stat-label">חוקרים ייחודיים</div>
+                    <div class="stat-label">חוקרים </div>
                 </div>
             `;
         }
