--- a/guided_tour.html
+++ b/guided_tour.html
@@ -433,7 +433,7 @@
 
                             yesBtn.addEventListener("click", () => {
                                 // --- שימוש בפונקציה החדשה במקום alert ---
-                                showToast("מעולה! לא חשבנו אחרת 😎");
+                                showToast("מעולה!  😎");
                             });
                         }
                     }, 300);
