--- a/admin-dashboard/pdf_report.html
+++ b/admin-dashboard/pdf_report.html
@@ -298,7 +298,7 @@
                 </div>
                 <div class="profile-item">
                     <div class="label">מחלקה</div>
-                    <div class="value" id="profile-department">מינהל המחקר</div>
+                    <div class="value" id="profile-department"> -</div>
                 </div>
                 <div class="profile-item">
                     <div class="label">תפקיד</div>
